# ThLang

./: .gitignore  CMakeLists.txt  README.md  TypeSystem.h  build.sh  codegen.cpp  codegen.h  lex.l  main.cpp  nn.h  parser.y  问题.md
.github/workflows/: build.yml
docs/: 2025-1-28_git_commit过大.md  问题.md
include/: TypeSystem.h  codegen.h  node.h  sema.h
include/thlang/: TypeSystem.h  codegen.h  node.h  sema.h  thlang.h
src/: CMakeLists.txt  TypeSystem.cpp  acli.cpp  codegen.cpp  lex.l  lex.yy.cpp  libthlang.cpp  main.cpp  parser.cpp  parser.hpp  parser.y  sema.cpp  unparse.cpp
