cmake_minimum_required(VERSION 3.5)
PROJECT(Thlang)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -std=c++17") #TODO
set(CMAKE_BUILD_TYPE Debug) #TODO
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib")
add_subdirectory(src)